syntax = "proto3";

import "SiLAFramework.proto";

package sila2.org.silastandard.tests.dateset.v1;

/* Contains a Date with Set constraint */
service DateSet {
}

/* A test type */
message DataType_TestType {
  sila2.org.silastandard.Date TestType = 1;  /* A test type */
}
